Refactor security and event management: - Remove unused Maven and VSCode configuration files. - Enhance CORS support in SecurityConfig. - Update EventController to improve event creation and status management. - Modify RSVPController to comment out unused methods. - Update AuthResponse to include user details. - Add username field to User model. - Refactor AuthService for better user handling and token generation. - Improve EventService with clearer event status management and RSVP handling. - Clean up job fetching logic in JobsPage and remove mock data. - Update RegisterForm and DashboardLayout for better accessibility and functionality. - Adjust authService to conditionally add authorization token.